--- a/style.css
+++ b/style.css
@@ -1,6 +1,49 @@
 .rosso{
   background-color: brown;
-  height: 100px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+}
+
+.H100{
+  min-height: 100PX;
+}
+
+.h300{
+  min-height: 300px;
+}
+
+.w60{
+  width: 60%;
+  margin: 0 auto;
+}
+
+/*HEADER*/
+
+header{
+  height: 80px;
+  color: white;
+}
+header nav{
+  height: 100%;
+}
+header nav .row{
+  height: 100%;
+}
+
+header li{
+  list-style: none;
+  display: inline;
+  margin: 0 10px;
+}
+
+ol{
+  margin: 0px 0px;
+}
+
+/*JUMBOTRON*/
+
+.logo{
+  font-size: 30px;
+  font-weight: 500;
 }
 
 .blu{
@@ -27,7 +70,12 @@
   padding-bottom: 10px;
 }
 
-header, #prefoot{
+.grigio{
+  background-color: #2C3E50;
+  color: white;
+}
+
+#prefoot{
   background-color: #3A546D;
 }
 
@@ -35,6 +83,8 @@ header, #prefoot{
   background-color: #1ABC9C;
 }
 
-footer{
-  background-color: #2C3E50;
+
+#avatar{
+  width: 20%;
+  text-align: center;
 }
